   and reject out-of-range values
 * [#color]: faster
 * [#io.videodev]: added colorspace rgba, with alpha=255.
 * [#io.videodev]: added conversion from RGB to colorspace "magic"
 * [#camera]: added colorspace rgba
 * [#io.quartz]: added support for keypress and keyrelease
 * [#io.quartz]: added 'menubar' method (show/hide system menubar on OSX)
 * [#io.quicktimecamera]: colorspace rgba's alpha=255 now.
 * [#io.quicktimecamera]: added colorspaces y, yuv, rgb.
 * [#io.videodev] and [#camera]: removed attribute 'transfer'
 * fixed bug in nested-list processing (which affected [print] and [display]
   and use of symbols that look like floats)
 * [#io.videodev]: add support for libv4l1
 * [#camera]: added method "api", added autodetection of camera modules
 * [#io.quicktimehw]: show real error messages
 * added [#to~], for converting grids to signals.

version 9.8 (2010.04.01):

 * fixed GCC >= 4.4.3 related problem (?) with c++ templates...
 * fixed [gf/mouse_spy] crash (also related to [#see])
 * small fixes to colouring of [display] and [#see]
 * added [gf/selector] [gf/getcwd] [gf/find_file] [gf/canvas_index]
 * OSX: print real error messages instead of error #-43, etc.
 * OSX: [#io.quartz] reports position
 * [#in]: lookup file in -path and the dir of the patch containing [#in]
 * removed annoying posts/errors when loading helpfiles
 * [#print]: fix bug with negative numbers in base 8 and 16
 * [# **]: fixed crash with negative numbers
 * [#out x11]: hide close-button
 * [#out x11]: add "border $1" method for hiding window-border (for fullscreen)
 * major update to cellular_1d.pd, instant_blur.pd, markov.pd, ...
 * reviewed and updated a lot of examples.
 * added examples : rgb_delay.pd dither.pd
 * [#]: added back an important optimisation to save on RAM
 * [#fold] [#scan]: allow op avg, op hypot
 * [#fold] [#scan]: better check for unallowed ops
 * merged binary_operations.pd + videodev_effects.pd -> various_effects.pd